# ImageProcessVideoCompress-CSLP

./: .gitignore  README.md  Report_CSLP_93221.docx
Rust_93221/Rust_Examples/: 1HelloWorld  1HelloWorld.rs  1HelloWorldErrors.rs  2VariablesAndStructures  2VariablesAndStructures.rs  2VariablesAndStructuresErrors.rs  3MatchAndLoop  3MatchAndLoop.rs  4FunctionsAndMacros  4FunctionsAndMacros.rs  5Ownership.rs  6Traits  6Traits.rs  7Modules  7Modules.rs  8Concurrency.rs
src/: BitStream.h  CMakeLists.txt  CompleteEncoder.cpp  Doxyfile  Golomb.h  GolombTests  HybridEncoder  HybridEncoderResults.md  HybridEncoder_Class  InterframeEncoder_Class  IntraEncoder  IntraframeEncoder_Class  README.md  RealHybridEncoder  TestGolomb.cpp  VideoEncoder.cpp  VideoProcessing.cpp  clean.sh  cleanupBuild.sh  output  project  valgrind-out.txt
src/2.Deliverable/: BitStream.h  output  tests.cpp
src/Classes/: BitStream.cpp  BitStream.h  Encoder.cpp  Encoder.h  FormatConverter.cpp  FormatConverter.h  Golomb.cpp  Golomb.h  HybridEncoder.cpp  HybridEncoder.h
src/Results/: IntraEncoderResults.md
src/Tests/: CompleteEncoder.cpp  Conversions.cpp  HybridEncoder.cpp  HybridEncoder_Class.cpp  InterframeEncoder.cpp  InterframeEncoder_Class.cpp  IntraframeEncoder.cpp  IntraframeEncoder_Class.cpp  RealHybridEncoder.cpp  TestBitStream.cpp  TestGolomb.cpp  VideoProcessing.cpp
src/html/: BitStreamTests_8dir_2link_8txt.html  BitStream_8cpp.html  BitStream_8dir_2link_8txt.html  BitStream_8h.html  BitStream_8h_source.html  CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  CMakeCache_8txt.html  CMakeLists_8txt.html  Conversions_8cpp.html  Conversions_8dir_2link_8txt.html  Encoder_8cpp.html  Encoder_8dir_2link_8txt.html  Encoder_8h.html  Encoder_8h_source.html  FormatConverter_8cpp.html  FormatConverter_8dir_2link_8txt.html  FormatConverter_8h.html  FormatConverter_8h_source.html  GolombTests_8dir_2link_8txt.html  Golomb_8cpp.html  Golomb_8dir_2link_8txt.html  Golomb_8h.html  Golomb_8h_source.html  HybridEncoderResults_8md.html  HybridEncoder_8cpp.html  HybridEncoder_8dir_2link_8txt.html  HybridEncoder__Class_8cpp.html  HybridEncoder__Class_8dir_2link_8txt.html  InterEncoder_8dir_2link_8txt.html  InterframeEncoder_8cpp.html  InterframeEncoder__Class_8cpp.html  InterframeEncoder__Class_8dir_2link_8txt.html  IntraEncoderResults_8md.html  IntraEncoder_8dir_2link_8txt.html  IntraframeEncoder_8cpp.html  IntraframeEncoder_8dir_2link_8txt.html  IntraframeEncoder__Class_8cpp.html  IntraframeEncoder__Class_8dir_2link_8txt.html  README_8md.html  (+70 more)
src/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  files_9.js  (+25 more)
